zabbix-single/overlays/prod/patch-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-server
  annotations:
    lbipam.cilium.io/ips: "192.168.50.156"
